--- a/seccion2-pnto1/index.html
+++ b/seccion2-pnto1/index.html
@@ -9,21 +9,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="divcito">
-    <div class="input1">
-        <form action="" id="formulario">
-        <label for="edad">Año de Nacimiento::</label>
-        <input type="text" id="edad" name="edad">
-    </div>
-        <div class="input2">
-        <label for="edad1">Año Actual::</label>
-        <input type="text" id="edad1" name="edad1">
-    </div>
-        <div class="boton">    
-        <input style="border-radius: 6px;" type="submit">
-    </div>
+<div class="año">
+    <form id="form">
+        <p class="enunciado" >Escriba el año para identificar si es bisciesto:::</p>
+        <input class="input" type="text" id="año" name="año">
+        <input type="submit">
     </form>
-    <p id="respuesta"></p>
-    </div>
+    <p id="respues">kinder..</p>
+</div>    
 </body>
 </html>
