--- a/seccion2-pnto1/index.html
+++ b/seccion2-pnto1/index.html
@@ -11,11 +11,15 @@
 <body>
 <div class="año">
     <form id="form">
-        <p class="enunciado" >Escriba el año para identificar si es bisciesto:::</p>
-        <input class="input" type="text" id="año" name="año">
-        <input type="submit">
+        <p class="enunciado" >Un corredor de maratón (distancia 42,195 Km) ha recorrido la carrera en 2 horas 25 minutos. Se desea un
+            algoritmo que calcule el tiempo medio en minutos por kilómetro. </p>
+        
+            <input class="input" type="text" id="kilometros" name="kilometros" placeholder="minutos a kilometros">
+            <p id="respues">kinder..</p>
+            <input class="input1" type="text" id="minutos" name="minutos" placeholder="kilometros a minutos">
+            <p id="respuesta">kinder..</p>
+        <input type="submit" class="envio">
     </form>
-    <p id="respues">kinder..</p>
 </div>    
 </body>
 </html>
