--- a/seccion2-pnto1/index.html
+++ b/seccion2-pnto1/index.html
@@ -9,16 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="año">
+<div class="diseño">
     <form id="form">
-        <p class="enunciado" >Un corredor de maratón (distancia 42,195 Km) ha recorrido la carrera en 2 horas 25 minutos. Se desea un
-            algoritmo que calcule el tiempo medio en minutos por kilómetro. </p>
-        
-            <input class="input" type="text" id="kilometros" name="kilometros" placeholder="minutos a kilometros">
-            <p id="respues">kinder..</p>
-            <input class="input1" type="text" id="minutos" name="minutos" placeholder="kilometros a minutos">
-            <p id="respuesta">kinder..</p>
-        <input type="submit" class="envio">
+        <p class="enunciado" >Realizar la conversión de una temperatura dada en grados Centígrados a grados Fahrenheit 
+        (Fórmula: F =(9/5) C + 32). </p>
+        <div class="inputs" >
+        <input class="grados" type="text" name="grados_centigrados" placeholder="ingrese grados centigrados">
+        <input class="boton" type="submit">
+        </div>
+        <p id="respuesta">hola</p>
     </form>
 </div>    
 </body>
